<resources>
    <string name="app_name">ButgetIn</string>
    <string name="title_home">Home</string>
    <string name="title_notification">Notification</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_article">Article</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_monthly_report">Monthly Report</string>
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="log_in_failed">Log In Failed!</string>
    <string name="transportation">Transportation</string>
    <string name="education">Education</string>
    <string name="food_and_drink">Food &amp; Drink</string>
    <string name="entertainment">Entertainment</string>
    <string name="others">Others</string>
    <string name="oops_no_articles_for_you_yet">Oops! No articles for you yet.</string>
    <string name="oops_no_notifications_for_you_yet">Oops! No notifications for you yet.</string>
    <string name="come_on_start_tracking_your_money_now">Come on, start tracking your money now!</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_login_with">or login with</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="email_checked_icon">Email checked icon</string>
    <string name="email_check_icon">Email check icon</string>
    <string name="email_icon">Email icon</string>
    <string name="full_name_check_icon">Full name check icon</string>
    <string name="full_name_icon">Full name icon</string>
    <string name="password_icon">Password icon</string>
    <string name="password_visibility">Password visibility</string>
    <string name="confirm_password_visibility">Confirm password visibility</string>
    <string name="confirm_password_edit">Confirm password edit</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="amount">Enter the amount</string>
    <string name="date">Enter the date</string>
    <string name="category">Enter the category</string>
    <string name="save">Save</string>
    <string name="category_icon">Category icon</string>
    <string name="date_icon">Date icon</string>
    <string name="amount_icon">Amount icon</string>
    <string name="butgetin">ButgetIn</string>
    <string name="track_your_money_stay_in_control">Track your money, stay in control</string>
    <string name="tab_layout">Tab layout</string>
    <string name="welcome_message">Take control of your money with ease. Track spending, manage budgets, and see where your money goes — all in one place. Start building better financial habits today!</string>
    <string name="welcome_to_butgetin">Welcome to ButgetIn!</string>
    <string name="select_your_expense_category">Select your expense category</string>
    <string name="health">Health</string>
    <string name="vehicle">Vehicle</string>
    <string name="utilities">Utilities</string>
    <string name="digital">Digital</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_your_income_category">Select your income category</string>
    <string name="allowance">Allowance</string>
    <string name="salary">Salary</string>
    <string name="bonus">Bonus</string>
    <string name="grants">Grants</string>
    <string name="log_in_successful">Log In Successful!</string>
    <string name="successful_message">Continue tracking expenses, setting budgets, and building better financial habits.</string>
    <string name="next">Next</string>
    <string name="welcome_illustration">Welcome illustration</string>
    <string name="see_all">See All</string>
    <string name="add">Add</string>
    <string name="account">Account</string>
    <string name="_07_12_2024">12/07/2024</string>
    <string name="_100_000">-100.000</string>
    <string name="article">Article</string>
    <string name="article_details">Article Details</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="linked_to_your_family">Linked to Your Family</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="copy_link">Copy Link</string>
    <string name="connect_with_your_family_and_make_financial_management_easier_and_more_transparent">Connect with your family and make financial management easier and more transparent.</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transaction_added">Transaction added</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="you_have_logged_out">You\'ve Logged Out!</string>
    <string name="hope_to_see_you_again_soon">We hope to see you again soon. Have a great day!</string>
    <string name="back">Back</string>
    <string name="your_account_is_registered">Your Account is Registered!</string>
    <string name="continue_tracking_expenses_setting_budgets_and_building_better_financial_habits">Continue tracking expenses, setting budgets, and building better financial habits.</string>
    <string name="close">Close</string>
    <string name="sign_up_successful">Sign Up Successful!</string>
    <string name="sign_up_failed">Sign Up Failed!</string>
    <string name="make_sure_the_information_you_entered_is_correct_then_try_again">Make sure the information you entered is correct, then try again.</string>
    <string name="welcome_to_butgetin_start_tracking_your_money_and_get_monthly_report">Welcome to ButgetIn! Start tracking your money and get monthly report.</string>
    <string name="continue_tracking_your_money_and_building_better_financial_habits">Continue tracking your money and building better financial habits.</string>
    <string name="start_tracking_your_money_and_building_better_financial_habits">Start tracking your money and building better financial habits.</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_your_reminder">Set your reminder</string>
    <string name="invalid_time_format">Invalid time format</string>
    <string name="please_select_a_reminder_time">Please select a reminder time</string>
    <string name="reminder_successfully_set">Reminder successfully set!</string>
    <string name="come_on_improve_your_financial_literacy">Come On, Improve Your Financial Literacy!</string>
    <string name="reminder">Reminder</string>
    <string name="track_your_money_reminder">Stay in control of your finances—track your money now!</string>
    <string name="reminder_notifications">ButgetIn Reminder Notifications</string>
    <string name="channel_description">Get reminders to track your money!</string>
    <string name="show_more">Show More</string>
    <string name="expense_structure">Expense Structure</string>
    <string name="income_chart_title">Income Breakdown</string>
    <string name="expense_chart_title">Expense Breakdown</string>
    <string name="income_categories">Income Categories</string>
    <string name="expense_categories">Expense Categories</string>
    <string name="_00_00">00:00</string>
    <string name="_04_00">04:00</string>
    <string name="_08_00">08:00</string>
    <string name="_12_00">12:00</string>
    <string name="_16_00">16:00</string>
    <string name="_20_00">20:00</string>
    <string name="illustration_transaction">Illustration Transaction</string>
    <string name="article_image">Article Image</string>
    <string name="image_icon">Image icon</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="system_mode">System Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="arrow">Arrow</string>
    <string name="tracking_your_money_here">Getting your income breakdown here!</string>
    <string name="getting_your_monthly_report_here">Getting your expense breakdown here!</string>
    <string name="passwords_do_not_match">Password do not match!</string>
    <string name="please_fill_all_fields">Please fill all fields!</string>
    <string name="confirm_logout_title">Are you sure want to log out?</string>
    <string name="confirm_logout_description">Yes</string>
    <string name="logout_failed_missing_credentials">Log Out Failed</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="expense_s_breakdown">Expense\'s Breakdown</string>
    <string name="tracking_your_expense_here">Tracking your expense here!</string>
    <string name="income_breakdown">Income Breakdown</string>
    <string-array name="data_name">
        <item>Yuk, Ajari Anak Menabung Sejak Dini</item>
        <item>Mengapa Literasi Keuangan Penting dan Cara Meningkatkannya</item>
        <item>Cara Seru untuk Ajari Anak Kelola Keuangan</item>
        <item>Tips dan Trik Mengelola Keuangan bagi Generasi Sandwich</item>
        <item>Cara Mengatur Keuangan Rumah Tangga yang Benar agar Tidak Boros</item>
        <item>7 Cara Meningkatkan Literasi Keuangan, Amankan Masa Depan!</item>
        <item>Cara Mengelola Uang dengan Baik bagi Pelajar</item>
        <item>6 Tips Mengatur Uang Untuk Anak Sekolah</item>
        <item>5 Cara Mudah Mengajarkan Anak Tentang Pengelolaan Keuangan, Sederhana Namun Berdampak Besar</item>
        <item>Ajar Anak Mengelola Uang Saku</item>
    </string-array>
</resources>