<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DialogTheme"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:clipChildren="true"
    android:clipToPadding="true"
    app:cardCornerRadius="32dp"
    app:cardElevation="4dp"
    tools:ignore="TextSizeCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/select_your_expense_category"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle">

            <RadioButton
                android:id="@+id/radioTransportation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/expense"
                android:padding="8dp"
                android:text="@string/transportation"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/expense"
                android:padding="8dp"
                android:text="@string/education"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioHealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/expense"
                android:padding="8dp"
                android:text="@string/health"
                android:textAppearance="?attr/textAppearanceBody1" />


            <RadioButton
                android:id="@+id/radioVehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/expense"
                android:padding="8dp"
                android:text="@string/vehicle"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioUtilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/expense"
                android:padding="8dp"
                android:text="@string/utilities"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioFoodAndDrink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/expense"
                android:padding="8dp"
                android:text="@string/food_and_drink"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioEntertainment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/expense"
                android:padding="8dp"
                android:text="@string/entertainment"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioDigital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/expense"
                android:padding="8dp"
                android:text="@string/digital"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/expense"
                android:padding="8dp"
                android:text="@string/others"
                android:textAppearance="?attr/textAppearanceBody1" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/expense"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background_light"
            android:backgroundTint="@color/light_red"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/okButton"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>