<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DialogTheme"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:clipChildren="true"
    android:clipToPadding="true"
    app:cardCornerRadius="32dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/set_your_reminder"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle">

            <RadioButton
                android:id="@+id/radioOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:padding="8dp"
                android:text="@string/_00_00"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:padding="8dp"
                android:text="@string/_04_00"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioOption3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:padding="8dp"
                android:text="@string/_08_00"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioOption4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:padding="8dp"
                android:text="@string/_12_00"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioOption5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:padding="8dp"
                android:text="@string/_16_00"
                android:textAppearance="?attr/textAppearanceBody1" />

            <RadioButton
                android:id="@+id/radioOption6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:padding="8dp"
                android:text="@string/_20_00"
                android:textAppearance="?attr/textAppearanceBody1" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background_light"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/okButton"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>